# ti-python

./: .gitignore  README.md  pyproject.toml  test.sh
examples/: age.py  count.py  graphics.py  helloworld.py  lists.py  strings.py  sum.py
ti-python/: __main__.py  compiler.py  generate.py  globals.py  tokenizer.py  types.py
ti_python/: __init__.py  __main__.py  compiler.py  decompile.py  error.py  generate.py  graphics.py  tokenizer.py  types.py  utils.py
ti_python/8xp/: encode.py  generate.py  tokens.py
ti_python/encoder/: decompile.py  encode.py  generate.py  tokens.py  tokens.xml
